--- a/ScriptFiles/.msmtprc
+++ b/ScriptFiles/.msmtprc
@@ -3,10 +3,10 @@ account default
 host smtp.gmail.com
 port 587
 auth on
-user your-email@gmail.com
-password "your password with spaces"
+user jiongco.jansenfranz@gmail.com
+password "pxkq vxke jkzd lpuz"
 tls on
 tls_starttls on
 tls_trust_file /etc/ssl/certs/ca-certificates.crt
-from your-email@gmail.com
+from jiongco.jansenfranz@gmail.com
 logfile ~/.msmtp.log
