--- a/ScriptFiles/.msmtprc
+++ b/ScriptFiles/.msmtprc
@@ -3,8 +3,8 @@ account default
 host smtp.gmail.com
 port 587
 auth on
-user jiongco.jansenfranz@gmail.com
-password "pxkq vxke jkzd lpuz"
+user $SMTP_USER
+password $SMTP_PASSWORD
 tls on
 tls_starttls on
 tls_trust_file /etc/ssl/certs/ca-certificates.crt
