--- a/ScriptFiles/.msmtprc
+++ b/ScriptFiles/.msmtprc
@@ -8,5 +8,5 @@ password $SMTP_PASSWORD
 tls on
 tls_starttls on
 tls_trust_file /etc/ssl/certs/ca-certificates.crt
-from jiongco.jansenfranz@gmail.com
+from $SMTP_USER
 logfile ~/.msmtp.log
